# Szachy-Framework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  bishop.cpp  bishop.h  board.cpp  board.h  enums.h  field.cpp  field.h  figure.cpp  figure.h  history.cpp  history.h  horse.cpp  horse.h  king.cpp  king.h  main.cpp  pawn.cpp  pawn.h  queen.cpp  queen.h  runmytests.sh  test_main.cpp  test_unit.cpp  tower.cpp  tower.h
exceptions/: coordsoutofboardexception.cpp  coordsoutofboardexception.h  usagewrongmovementexception.cpp  usagewrongmovementexception.h
unit_tests/: iss3.cpp  iss6.cpp
